--- a/app/src/app/contact-manager/components/toolbar/toolbar.component.scss
+++ b/app/src/app/contact-manager/components/toolbar/toolbar.component.scss
@@ -1,5 +1,13 @@
 $iconWidth: 56px;
 
+.example-icon {
+    padding: 0 14px;
+  }
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+  
+
 .sidenav-toggle {
     display: none;
 
